--- a/pom.xml
+++ b/pom.xml
@@ -73,19 +73,19 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
             <version>2.1.7.RELEASE</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <artifactId>spring-webflux</artifactId>
             <version>5.1.9.RELEASE</version>
         </dependency>
         <dependency>
@@ -103,7 +103,13 @@
             <artifactId>tbapi-services-impl-oe</artifactId>
             <version>10.2.2.10_fix4</version>
         </dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.2.12.RELEASE</version>
+        </dependency>
+
+        <!--        <dependency>-->
 <!--            <groupId>com.netcracker.telecom-business-api</groupId>-->
 <!--            <artifactId>telecom-business-api-tmf-order-entry-module</artifactId>-->
 <!--            <version>2.0.3.8_fix5</version>-->
