--- a/pom.xml
+++ b/pom.xml
@@ -3,126 +3,27 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+    <modules>
+        <module>pnl-service-parent</module>
+        <module>pnl-service-models</module>
+        <module>pnl-service-toms-integration</module>
+        <module>pnl-service-neo4j</module>
+        <module>pnl-service-calculation-logic</module>
+        <module>pnl-service-impl</module>
+        <module>pnl-service-app</module>
+    </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.7.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>2.0.8.RELEASE</version>
     </parent>
+
     <groupId>com.hroniko</groupId>
     <artifactId>pnl-service</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>pnl-service</name>
     <description>PnL calculation service by graph engine</description>
-
-    <properties>
-        <java.version>12</java.version>
-    </properties>
-    <repositories>
-        <!-- WA for the https://issues.apache.org/jira/browse/MNG-5781 -->
-        <repository>
-            <id>central2</id>
-            <url>https://nexussrv.netcracker.com/content/repositories/central</url>
-        </repository>
-        <repository>
-            <id>nc.thirdparty_sync</id>
-            <url>https://nexuscn.netcracker.com/content/repositories/nc.thirdparty_sync/</url>
-        </repository>
-        <repository>
-            <id>nc.general_sync</id>
-            <url>https://nexuscn.netcracker.com/content/repositories/nc.general_sync/</url>
-        </repository>
-    </repositories>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-neo4j</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.9</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-            <version>2.1.7.RELEASE</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webflux</artifactId>
-            <version>5.1.9.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>net.objecthunter</groupId>
-            <artifactId>exp4j</artifactId>
-            <version>0.4.8</version>
-        </dependency>
-        <dependency>
-            <groupId>com.netcracker.telecom-business-api</groupId>
-            <artifactId>telecom-business-api-datamodel</artifactId>
-            <version>2.0.3.8_fix5</version>
-        </dependency>
-        <dependency>
-            <groupId>com.netcracker.tbapi-services</groupId>
-            <artifactId>tbapi-services-impl-oe</artifactId>
-            <version>10.2.2.10_fix4</version>
-        </dependency>
-        <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-core</artifactId>
-            <version>3.2.12.RELEASE</version>
-        </dependency>
-
-        <!--        <dependency>-->
-<!--            <groupId>com.netcracker.telecom-business-api</groupId>-->
-<!--            <artifactId>telecom-business-api-tmf-order-entry-module</artifactId>-->
-<!--            <version>2.0.3.8_fix5</version>-->
-<!--        </dependency>-->
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
