--- a/pnl-service-app/pom.xml
+++ b/pnl-service-app/pom.xml
@@ -32,6 +32,11 @@
         </dependency>
         <dependency>
             <groupId>com.hroniko</groupId>
+            <artifactId>pnl-service-mongo</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hroniko</groupId>
             <artifactId>pnl-service-calculation-logic</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
