--- a/pnl-service-calculation-logic/pom.xml
+++ b/pnl-service-calculation-logic/pom.xml
@@ -22,7 +22,7 @@
         </dependency>
         <dependency>
             <groupId>com.hroniko</groupId>
-            <artifactId>pnl-service-neo4j</artifactId>
+            <artifactId>pnl-service-arango</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 <!--        <dependency>-->
