--- a/pnl-service-parent/pom.xml
+++ b/pnl-service-parent/pom.xml
@@ -20,7 +20,7 @@
         <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
         <fast-classpath-scanner.version>3.1.13</fast-classpath-scanner.version>
         <spring-boot-starter-actuator.version>${spring-boot.version}</spring-boot-starter-actuator.version>
-        <spring-boot-starter-data-neo4j.version>${spring-boot.version}</spring-boot-starter-data-neo4j.version>
+
         <spring-boot-devtools.version>${spring-boot.version}</spring-boot-devtools.version>
         <spring-boot-configuration-processor.version>${spring-boot.version}</spring-boot-configuration-processor.version>
         <spring-boot-starter-webflux.version>${spring-boot.version}</spring-boot-starter-webflux.version>
@@ -34,6 +34,10 @@
         <reactor-core.version>3.2.12.RELEASE</reactor-core.version>
     </properties>
     <repositories>
+        <repository>
+            <id>arangodb-snapshots</id>
+            <url>https://oss.sonatype.org/content/groups/staging</url>
+        </repository>
         <!-- WA for the https://issues.apache.org/jira/browse/MNG-5781 -->
         <repository>
             <id>central2</id>
@@ -61,10 +65,15 @@
                 <artifactId>spring-boot-starter-actuator</artifactId>
                 <version>${spring-boot-starter-actuator.version}</version>
             </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-starter-data-neo4j</artifactId>-->
+<!--                <version>${spring-boot-starter-data-neo4j.version}</version>-->
+<!--            </dependency>-->
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-neo4j</artifactId>
-                <version>${spring-boot-starter-data-neo4j.version}</version>
+                <groupId>com.arangodb</groupId>
+                <artifactId>arangodb-spring-boot-starter</artifactId>
+                <version>1.0.2</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
