--- a/pnl-service-models/pom.xml
+++ b/pnl-service-models/pom.xml
@@ -36,6 +36,14 @@
             <groupId>com.netcracker.tbapi-services</groupId>
             <artifactId>tbapi-services-impl-oe</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>spring-data-orientdb-graph</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
