--- a/pnl-service-neo4j/pom.xml
+++ b/pnl-service-neo4j/pom.xml
@@ -25,9 +25,17 @@
             <artifactId>pnl-service-toms-integration</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-data-neo4j</artifactId>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-neo4j</artifactId>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>spring-data-orientdb-graph</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>spring-boot-orientdb-autoconfigure</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
