--- a/pnl-service-parent/pom.xml
+++ b/pnl-service-parent/pom.xml
@@ -61,11 +61,27 @@
                 <artifactId>spring-boot-starter-actuator</artifactId>
                 <version>${spring-boot-starter-actuator.version}</version>
             </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-starter-data-neo4j</artifactId>-->
+<!--                <version>${spring-boot-starter-data-neo4j.version}</version>-->
+<!--            </dependency>-->
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-neo4j</artifactId>
-                <version>${spring-boot-starter-data-neo4j.version}</version>
+                <groupId>com.orientechnologies</groupId>
+                <artifactId>spring-data-orientdb-graph</artifactId>
+                <version>0.14</version>
             </dependency>
+            <dependency>
+                <groupId>com.orientechnologies</groupId>
+                <artifactId>spring-boot-orientdb-autoconfigure</artifactId>
+                <version>0.14</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate.javax.persistence</groupId>
+                <artifactId>hibernate-jpa-2.1-api</artifactId>
+                <version>1.0.2.Final</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-devtools</artifactId>
