--- a/pnl-service-models/pom.xml
+++ b/pnl-service-models/pom.xml
@@ -29,6 +29,10 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.netcracker.telecom-business-api</groupId>
             <artifactId>telecom-business-api-datamodel</artifactId>
         </dependency>
